# atelier

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: format-engineer.md  spec-verifier.md
.claude/skills/implement-spec/: SKILL.md
.github/workflows/: ci.yml
crates/atelier-3d/: Cargo.toml
crates/atelier-3d/src/: lib.rs
crates/atelier-ai/: Cargo.toml
crates/atelier-ai/src/: lib.rs
crates/atelier-app/: Cargo.toml
crates/atelier-app/src/: canvas.rs  main.rs  panels.rs
crates/atelier-color/: Cargo.toml
crates/atelier-color/src/: lib.rs
crates/atelier-core/: Cargo.toml
crates/atelier-core/src/: adjust.rs  blend.rs  command.rs  document.rs  history.rs  lib.rs  mask.rs  node.rs  tile.rs
crates/atelier-gpu/: Cargo.toml
crates/atelier-gpu/src/: checkerboard.rs  compositor.rs  lib.rs  viewport.rs
crates/atelier-gpu/src/shaders/: checkerboard.wgsl  composite.wgsl
crates/atelier-gpu/tests/: golden_parity.rs
crates/atelier-io/: Cargo.toml
crates/atelier-io-ai/: Cargo.toml
crates/atelier-io-ai/src/: lib.rs
crates/atelier-io-psd/: Cargo.toml
crates/atelier-io-psd/src/: lib.rs
crates/atelier-io/src/: atl.rs  image_io.rs  lib.rs
crates/atelier-raster/: Cargo.toml
crates/atelier-raster/src/: adjust.rs  blend.rs  brush.rs  compositor.rs  fill.rs  lib.rs  ops.rs  raster_vector.rs  resample.rs  selection.rs
crates/atelier-settings/: Cargo.toml
crates/atelier-settings/src/: lib.rs
crates/atelier-text/: Cargo.toml
crates/atelier-text/src/: lib.rs
crates/atelier-vector/: Cargo.toml
crates/atelier-vector/src/: boolean.rs  lib.rs  path.rs  shape.rs  tessellate.rs
docs/: ARCHITECTURE.md  DECISIONS.md  FORMAT-ATL.md  ORIGINAL-PROMPT.md  REQUIREMENTS.md  RISKS.md  ROADMAP.md  SESSION-STATE.md  VISION.md
specs/: 0000-TEMPLATE.md  0001-bootstrap-shell.md  0002-document-model.md  0003-raster-tiles-cpu-compositor.md  0004-gpu-compositor-parity.md  0005-brush-move-resize.md  0006-region-recomposite-perf.md  0007-selection-model-tools.md  0008-clipped-paint-adjustments.md  0009-adjustment-layers.md  0010-transform-crop-resample.md  0011-magic-wand-selection-ops.md  0012-vector-path-model-tessellation.md  0013-vector-canvas-render.md  0014-shape-tools.md  0015-polygon-star-shapes.md  0016-pen-tool.md  0017-direct-select-anchor-edit.md  0018-anchor-add-remove.md  0019-segment-click-insert.md  0020-bezier-handle-model.md  0021-bezier-handle-ui.md  0022-align-to-canvas.md  0023-rasterize-vector-layer.md  0024-compound-paths.md  0025-rasterize-antialiasing.md  0026-align-distribute-shapes.md  0027-duplicate-layer.md  0028-multiselect-group.md  0029-cross-layer-align.md  0030-copy-paste-layers.md  0031-boolean-path-ops.md  0032-place-image.md  0033-export-image.md  0034-more-image-formats.md  0035-eyedropper.md  0036-fill-selection.md  0037-gradient-fill.md  0038-paint-bucket.md  0039-radial-gradient.md  (+20 more)
