[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Toddoward/atelier"

[workspace.dependencies]
# internal
atelier-core = { path = "crates/atelier-core" }
atelier-raster = { path = "crates/atelier-raster" }
atelier-vector = { path = "crates/atelier-vector" }
atelier-gpu = { path = "crates/atelier-gpu" }
atelier-color = { path = "crates/atelier-color" }
atelier-text = { path = "crates/atelier-text" }
atelier-io = { path = "crates/atelier-io" }
atelier-io-psd = { path = "crates/atelier-io-psd" }
atelier-io-ai = { path = "crates/atelier-io-ai" }
atelier-ai = { path = "crates/atelier-ai" }
atelier-3d = { path = "crates/atelier-3d" }
atelier-settings = { path = "crates/atelier-settings" }

# external (versions pinned at workspace level; crates inherit)
wgpu = "24"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "accesskit", "wayland", "x11"] }
egui = { version = "0.31", features = ["accesskit"] }
egui_dock = "0.16"
egui_kittest = "0.31"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
lz4_flex = "0.11"
rfd = "0.15"
lyon = "1"
i_overlay = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1            # wgpu/egui unusable at opt-level 0

[profile.dev.package."*"]
opt-level = 2            # always optimize dependencies
