[package]
name = "atelier-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atelier-core = { workspace = true }
atelier-gpu = { workspace = true }
atelier-io = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
rfd = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
egui_kittest = { workspace = true }
accesskit = "0.17"
