[package]
name = "atelier-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atelier-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
atelier-raster = { workspace = true }

[dev-dependencies]
pollster = "0.4"
