[package]
name = "atelier-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atelier-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true }
